Menu fix (Dark Mode)

--- a/apps/block_scout_web/assets/css/theme/_dark-theme.scss
+++ b/apps/block_scout_web/assets/css/theme/_dark-theme.scss
@@ -792,7 +792,7 @@ $labels-dark: #8a8dba; // header nav, labels
 .dark-theme-applied .dropdown-item.active, .dark-theme-applied .dropdown-item:hover, .dark-theme-applied .dropdown-item:focus {
     background-image: none;
     width: 100%;
-    background-color: #35335d!important;
+    background-color: #3f3f42!important;
 }
  .dark-theme-applied .dropdown-item:hover:before {
 	content: "|";
@@ -809,7 +809,7 @@ $labels-dark: #8a8dba; // header nav, labels
 .dark-theme-applied .navbar.navbar-primary .navbar-nav .nav-link:focus {
 	background-image: none;
     width: 100%;
-	background-color: #35335d!important;
+	background-color: #3f3f42!important;
 	color: white;
 	border: none;
   }
